# miniWeatherML

./: .gitmodules  LICENSE  README.md
experiments/community_benchmark/: CMakeLists.txt  driver.cpp
experiments/community_benchmark/inputs/: input_euler3d.yaml  input_euler3d_1024x1024x100.yaml  input_euler3d_2048x2048x100.yaml  input_euler3d_4096x4096x100.yaml
experiments/kelvin_helmholtz/: CMakeLists.txt  driver.cpp
experiments/kelvin_helmholtz/inputs/: input_kelvin_helmholtz.yaml
experiments/kelvin_helmholtz_example/: driver.cpp
experiments/kelvin_helmholtz_example/inputs/: input_euler3d.yaml
experiments/sgs-dnn/: train.cpp
experiments/sgs-dnn/custom_modules/: .Experiment_Manager.h.swp  Experiment_Manager.h
experiments/sgs-dnn/inputs/: .input_euler3d.yaml.swp  input_euler3d.yaml
experiments/simple_city/: driver.cpp  perturb.h
experiments/simple_city/custom_modules/: horizontal_sponge.h  nudge.h  time_averager.h  uvel_sponge.h
experiments/simple_city/inputs/: input_building.yaml  input_city.yaml  input_euler3d.yaml
experiments/supercell_example/: CMakeLists.txt  driver.cpp
experiments/supercell_example/inputs/: input_euler3d.yaml
experiments/supercell_example/jupyternotebooks/: ke_spectra.ipynb  plot3d.ipynb
experiments/supercell_kessler_surrogate/: CMakeLists.txt  README.md  gather_statistics.cpp  generate_micro_data.cpp  inference_ponni.cpp
experiments/supercell_kessler_surrogate/custom_modules/: gather_micro_statistics.h  generate_micro_surrogate_data.h  microphysics_kessler_ponni.h
experiments/supercell_kessler_surrogate/inputs/: input_euler3d.yaml
experiments/supercell_kessler_surrogate/inputs/examples/: supercell_kessler_singlecell_model_weights.h5
experiments/supercell_kessler_surrogate/jupyter_notebooks/: README.md  kessler_netcdf_to_numpy.ipynb  kessler_singlecell_train_example.ipynb
experiments/supercell_llf_dnn/: CMakeLists.txt  global_llf.cpp
experiments/supercell_llf_dnn/custom_modules/: Experiment_Manager.h
experiments/supercell_llf_dnn/inputs/: input_euler3d.yaml
experiments/supercell_micro_surrogate/: CMakeLists.txt  gather_statistics.cpp  generate_micro_data.cpp  inference_pinni.cpp  torch_inference_micro.cpp
experiments/supercell_micro_surrogate/custom_modules/: CMakeLists.txt  gather_micro_statistics.h  generate_micro_surrogate_data.h  microphysics_kessler_pinni.h  microphysics_kessler_ponni.h  microphysics_torch.h  torch_interface.cpp  torch_interface.h
experiments/supercell_micro_surrogate/inputs/: input_euler3d.yaml  input_nn.yaml  supercell_micro_Ntrain1000000_input.txt  supercell_micro_Ntrain1000000_output.txt  supercell_micro_PyTorch_SingleMLP_Cpp.pt
experiments/supercell_micro_surrogate/inputs/examples/: supercell_kessler_stencil_input_scaling.txt  supercell_kessler_stencil_output_scaling.txt
experiments/supercell_micro_surrogate/jupyter_notebooks/: kessler_singlecell_train_example.ipynb
experiments/supercell_weno/: CMakeLists.txt  train_weno.cpp
experiments/supercell_weno/custom_modules/: Train_Weno.h  WenoLimiter.h  WenoLimiter_custom.h  WenoLimiter_recon.h  WenoLimiter_recon_custom.h  calculate_loss_and_overwrite_lo.h  dycore_custom.h  dynamics_euler_stratified_wenofv.h  train_mini_batches.cpp
experiments/supercell_weno/inputs/: input_euler3d.yaml
input/: input_euler3d.yaml
model/: CMakeLists.txt  main_header.h
model/core/: CMakeLists.txt  DataManager.h  Options.h  coupler.h
model/dynamics/: Dycore.h
model/modules/: CMakeLists.txt  column_nudging.h  dynamics_euler_energy.h  dynamics_euler_obstructions.h  dynamics_euler_stratified_anelastic.h  dynamics_euler_stratified_energy.h  dynamics_euler_stratified_wenofv.h  dynamics_euler_stratified_wenofv_balance_with_gravity.h  dynamics_euler_stratified_wenofv_subtract_exact.h  microphysics_kessler.h  microphysics_p3.h  perturb_temperature.h  riemann.h  sponge_layer.h
model/modules/dynamics_comp_nh/: dynamics_compr_nh_energy.h
model/modules/dynamics_compr_nh_rho_theta/: WenoLimiter.h  dynamics_compr_nh_rho_theta.h
model/modules/helpers/: TransformMatrices.h  WenoLimiter.h  WenoLimiter_recon.h
model/modules/helpers/microphysics_p3/: CMakeLists.txt  micro_p3.F90  micro_p3_utils.F90  scream_types.F90  wv_sat_scream.F90
model/modules/microphysics_p3/: micro_p3_utils.F90  microphysics_p3.h  scream_abortutils.F90
model/physics/micro/kessler/: kessler.f90
src/: CMakeLists.txt  Dycore.h  Exchange.h  driver.cpp  main_header.h
src/core/: CMakeLists.txt  DataManager.h  MultipleFields.h  Options.h  coupler.h  coupler_globals.cpp
src/coupler/: CMakeLists.txt  DataManager.h  MultipleFields.h  Options.h  coupler.h  coupler_globals.cpp  vertical_interp.h
src/dynamics/: CMakeLists.txt  Dycore.h
src/modules/: CMakeLists.txt  perturb_temperature.h
src/physics/micro/kessler/: CMakeLists.txt  Microphysics.h
